<resources>
    <string name="app_name">AppCobranzaMG</string>

    <string name="login">Iniciar Sesion</string>
    <string name="logo">Mont Group SAC</string>
    <string name="user">User</string>
    <string name="password">Password</string>

    <string name="newRoute">Armar Ruta</string>
    <string name="listClients">Cartelera de Cliente</string>
    <string name="profile">Perfil</string>
    <string name="welcome">Bienvenido</string>
    <string name="goals">logros</string>
    <string name="exit">Exit</string>

    <string name="phone">numTelf</string>
    <string name="email">email</string>
    <string name="place">lugar</string>
    <string name="clients">numClientes</string>
    <string name="photo">Photo</string>
    <string name="Telf">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="lugar">Zona Asignada</string>
    <string name="numClientes">Clientes Asignados</string>

    <string name="back">atras</string>
    <string name="fullName">Nombre y Apellido</string>
    <string name="ruc">RUC</string>
    <string name="searchClient">Buscar Cliente por:</string>
    <string name="write">Escribir</string>
    <string name="Search">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insetDate">Insertar Fecha</string>
    <string name="programDate">Programar Cobro</string>
    <string name="observations">Observaciones</string>
    <string name="name">Nombre</string>
    <string name="name_prueba">aaaaaa</string>
    <string name="deuda">Deuda</string>
    <string name="venc_deuda">Vencimiento Deuda</string>
    <string name="forma_fch">12/12/2018</string>
    <string name="program_cob">Programar Cobranza</string>
    <string name="client">Cliente</string>
    <string name="money_prueba">0.00</string>
    <string name="ruc_prueba">545485451257</string>
    <string name="addClient">Agregar Cliente</string>
    <string name="direccion">Direccion</string>
    <string name="distrito">Distrito</string>
    <string name="serie">Serie</string>

    <string-array name="TDoc">
        <item>Facturas</item>
        <item>Nota de Crédito</item>
        <item>Nota de Devito</item>
        <item>Boletas de Venta</item>
        <item>Letras</item>
        <item>Cod</item>
        <item>Cheque Diferido</item>
    </string-array>

    <string-array name="TPago">
        <item>--Seleccione--</item>
        <item>Efectivo</item>
        <item>Cheque</item>
    </string-array>

</resources>
