<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="42dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo"
                    app:srcCompat="@drawable/iconprofile" />

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_weight="1"
                    android:text="@string/user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:text="@string/Telf"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:text="@string/correo"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:text="@string/lugar"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/zone_text"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/place" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:text="@string/numClientes"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/clients_txt"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clients" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>