<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SelectclienteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/main_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/client"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/name_prueba"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_direccion"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/name_prueba"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distrito"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_distrito"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/name_prueba"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deuda"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_deuda"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/money_prueba"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/venc_deuda"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_fchvenc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/forma_fch"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/observations"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:focusable="false"
            tools:ignore="Autofill"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_aceptarRUC"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="Enviar"/>

    </LinearLayout>
</FrameLayout>