<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:text="@string/client"

            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:text="@string/ruc"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:text="@string/deuda"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="81dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/name_prueba" />

        <TextView
            android:id="@+id/txt_idClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="218dp"
            android:layout_marginTop="0dp"
            android:visibility="invisible"
            android:text="@string/name_prueba" />

        <TextView
            android:id="@+id/txt_ruc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="81dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/ruc_prueba" />

        <TextView
            android:id="@+id/txt_deuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="81dp"
            android:layout_marginTop="41dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/money_prueba" />

        <ImageButton
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginEnd="19dp"
            app:srcCompat="@drawable/ic_remove" />


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>