<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/busClient"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/searchClient" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_Radio">

            <RadioGroup
                android:id="@+id/rbtn_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtn_ruc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/ruc" />

                <RadioButton
                    android:id="@+id/rbtn_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fullName" />
            </RadioGroup>

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchClient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/write"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorPrimary"
            android:onClick="callSearch"
            android:text="@string/Search"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>