<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/txt_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="14dp"
            android:text="@string/name_prueba" />

        <TextView
            android:id="@+id/txt_ruc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="14dp"
            android:text="@string/ruc_prueba" />

        <TextView
            android:id="@+id/txt_deuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="90dp"
            android:text="@string/money_prueba" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>