<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:weightSum="1"
        android:layout_weight="0.52"
        tools:ignore="InefficientWeight">

        <ImageView
            android:layout_width="229dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.29"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            tools:ignore="InefficientWeight,NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="HardcodedText"
                    android:hint="@string/user"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/iconpass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="HardcodedText"
                    android:hint="Password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:onClick="callLogin"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>